Projet final de collecte et interpretation de donnee  FINIS
