# src/routes/playlistRoutes.ts
@@ -4,8 +4,12 @@ import {
   createPlaylistController,
   getAllPlaylistsController,
   getPlaylistController,
+  getPlaylistByNameController,
   addSongToPlaylistController,
   getSongsFromPlaylistController,
+  removeSongFromPlaylistController,
+  deletePlaylistController,
+  getPlaylistSongsDetailsController,
 } from "../controllers/playlistController";
 
 const router = Router();
@@ -14,11 +18,14 @@ router.post("/", protect, createPlaylistController);
 
 router.get("/", protect, getAllPlaylistsController);
 
-
-router.get("/:id", protect, getPlaylistController);
-
-router.get("/:id/songs", protect, getSongsFromPlaylistController);
+router.get("/by-name/:name", protect, getPlaylistByNameController);
+router.get("/:id/songs/details", protect, getPlaylistSongsDetailsController);
 
 router.post("/:id/songs", protect, addSongToPlaylistController);
+router.delete("/:id/song", protect, removeSongFromPlaylistController);
+router.get("/:id/songs", protect, getSongsFromPlaylistController);
+
+router.get("/:id", protect, getPlaylistController);
+router.delete("/:id", protect, deletePlaylistController);
 
 export default router;
